# misis2023f-22-01-popov-a-yu

./: .gitignore  CMakeLists.txt  Doxyfile  README-en.md  README.md  codeforces.id  status.md
docs/rtf/: refman.rtf
prj.codeforces/: 0001a.cpp  0004a.cpp  0009a.cpp  0050a.cpp  0069a.cpp  0071a.cpp  0106a.cpp  0114a.cpp  0158a.cpp  0231a.cpp  0236a.cpp  0282a.cpp  0546a.cpp  0677a.cpp  0791a.cpp  1328a.cpp  1335a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt
prj.cw/example/: CMakeLists.txt  input.txt  main.cpp  test_inputs.txt
prj.cw/src/: CMakeLists.txt  automations_constructor.cpp  automations_constructor.h
prj.cw/src/modules/: CMakeLists.txt
prj.cw/src/modules/choreograph/: CMakeLists.txt  Choreograph.h  Sequence.hpp
prj.cw/src/modules/choreograph/phrase/: Combine.hpp  Retime.hpp
