set_directory_properties(PROPERTIES EXCLUDE_FROM_ALL YES)
add_executable(0004a 0004a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0677a 0677a.cpp)
add_executable(0106a 0106a.cpp)
add_executable(0114a 0114a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0001a 0001a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(1335a 1335a.cpp)
add_executable(0009a 0009a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(1328a 1328a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0069a 0069a.cpp)