add_library (choreograph #STATIC
	"Choreograph.h"
	"Cue.cpp" 
	"Easing.h" 
	"Motion.hpp" 
	"Output.hpp" 
	"Phrase.hpp" 
	"Sequence.hpp" 
	"Timeline.cpp" 
	"Timeline.h" 
	"TimelineItem.cpp" 
	"TimelineItem.h" 
	"TimelineOptions.hpp" 
	"TimeType.h" 
	"detail/MakeUnique.hpp" 
	"detail/VectorManipulation.hpp" 
	"phrase/Combine.hpp" 
	"phrase/Hold.hpp" 
	"phrase/Procedural.hpp" 
	"phrase/Ramp.hpp" 
	"phrase/Retime.hpp" 
	"phrase/Sugar.hpp")